--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -141,6 +141,9 @@ a:active {
 .close {
     display: block;
 }
+.mobileBasket__close {
+
+}
 
 .header__nav,
 .asideNav,
@@ -406,6 +409,10 @@ a:active {
     cursor: pointer;
     font-weight: 700;
     font-size: 15px;
+    
+}
+.nav__label_active.transition {
+    transition: background-color 500ms linear;
 }
 
 .frontpage .mainGallery {
@@ -680,6 +687,9 @@ a:active {
     border-radius: 10px;
     background-color: var(--text-color-white);
     justify-content: space-between;
+}
+.list_item .input_text {
+    border: 1px solid #B06D81;
 }
 
 .card__img {
@@ -1509,6 +1519,10 @@ input[type="number"]:focus {
 .category_active {
     background-color: var(--color-bordeaux);
     font-weight: 700;
+   
+}
+.category_active {
+    transition: background-color 400ms linear;
 }
 
 .gallery {
@@ -2779,25 +2793,26 @@ input[type="number"]:focus {
     html,
     .modal__topping,
     .deskBasket__menu {
-        scrollbar-color: 0 0 6px rgba(0, 0, 0, 0.5) 0 0 6px rgba(0, 0, 0, 0.3);
+        scrollbar-color: #dad7d7;
+        
         /* «цвет ползунка» «цвет полосы скроллбара» */
         scrollbar-width: thin;
         /* толщина */
     }
 
     ::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
+        width: 3px;
+        height: 3px;
     }
 
     ::-webkit-scrollbar-track {
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        border-radius: 10px;
+        background-color:#dad7d7;
+        border-radius: 3px;
     }
 
     ::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        border-radius: 3px;
+        background-color: none;
     }
 
     .mainGallery,
