--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -499,7 +499,7 @@ a:active {
     padding-bottom: 26px;
 }
 
-.order__basket .mobileBasket__card {
+.order__basket .basket__card {
     display: grid;
     grid-template-columns: min-content 1fr auto;
     grid-template-rows: min-content min-content;
@@ -513,7 +513,7 @@ a:active {
     padding-right: 15px;
 }
 
-.order__basket .mobileBasket__count {
+.order__basket .basket__count {
     justify-self: end;
 }
 
@@ -538,7 +538,7 @@ a:active {
     padding-bottom: 19px;
 }
 
-.order__topping_card .mobileBasket__h3 {
+.order__topping_card .basket__h3 {
     padding-bottom: 0px;
     width: 100%;
 }
@@ -555,19 +555,19 @@ a:active {
     height: 3px;
 }
 
-.order__list .mobileBasket__h3,
-.last__card .mobileBasket__h3 {
+.order__list .basket__h3,
+.last__card .basket__h3 {
     grid-row: 1/2;
     grid-column: 2/4;
     width: 100%;
     padding-bottom: 0px;
 }
 
-.last__card .mobileBasket__price {
+.last__card .divBasket__price {
     align-self: end;
 }
 
-.order__basket .last__card .mobileBasket__h3 {
+.order__basket .last__card .basket__h3 {
     color: var(--color-bordeaux-light);
     font-weight: 700;
 }
@@ -598,7 +598,7 @@ a:active {
     color: var(--text-color-grey);
 }
 
-.order__topping_card .mobileBasket__price {
+.order__topping_card .divBasket__price {
     justify-self: end;
 }
 
@@ -606,16 +606,16 @@ a:active {
     padding-top: 3px;
 }
 
-.order__list .mobileBasket__card_img {
+.order__list .basket__card_img {
     height: 68px;
 }
 
-.order__list .mobileBasket__card_pict,
-.last__card .mobileBasket__card_pict {
+.order__list .basket__card_pict,
+.last__card .basket__card_pict {
     grid-row: 1/3;
 }
 
-.last__card .mobileBasket__card_pict {
+.last__card .basket__card_pict {
     background-color: var(--color-bordeaux-light);
     border-radius: 10px;
     height: 68px;
@@ -625,7 +625,7 @@ a:active {
     align-items: center;
 }
 
-.last__card .mobileBasket__card_img {
+.last__card .basket__card_img {
     width: 27px;
     height: 35px;
 }
@@ -1103,8 +1103,7 @@ address {
     border-radius: 10px;
 }
 
-.mobileBasket__delivery__item,
-.desktopBasket__delivery__item {
+.basket__delivery__item {
     display: flex;
     list-style-type: none;
     flex-grow: 1;
@@ -1158,25 +1157,18 @@ address {
     transition: left linear 0.3s;
 }
 
-.desktopBasket__delivery__item label {
-    color: var(--text-color-grey);
-    transition: color linear 0.3s;
-}
 
-.mobileBasket__delivery__item.basket__delivery_active label,
-.desktopBasket__delivery__item.basket__delivery_active label {
+.basket__delivery__item.basket__delivery_active label {
     color: var(--text-color-dark-grey);
     transition: color linear 0.3s;
 }
 
 
-.mobileBasket__delivery_input,
-.deskBasket__delivery_input {
+.basket__delivery_input {
     display: none;
 }
 
-.mobileBasket__count,
-.deskBasket__count {
+.basket__count {
     display: flex;
 }
 
@@ -1196,51 +1188,42 @@ address {
     margin-left: 30px;
 }
 
-.mobileBasket__card,
-.deskBasket__card {
+.basket__card {
     display: flex;
     column-gap: 10px;
 }
 
-.mobileBasket__card_img,
-.deskBasket__card_img {
+.basket__card_img{
     width: 75px;
     height: 75px;
     object-fit: cover;
     border-radius: 10px;
 }
 
-.mobileBasket__desc,
-.deskBasket__desc {
+.basket__desc {
     flex-grow: 1;
 }
 
-.mobileBasket__h3,
-.deskBasket__h3 {
+.basket__h3 {
     padding-bottom: 12px;
     width: 200px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.deskBasket__h3 {
-    font-size: 13px;
-    font-weight: 500;
-}
-.mobileBasket__h3 {
+
+.basket__h3 {
     font-size: 15px;
     font-weight: 500;
 }
 
-.mobileBasket__weight,
-.deskBasket__weight {
+.basket__weight {
     font-size: 13px;
     font-weight: 700;
     color: var(--text-color-light-grey);
 }
 
-.mobileBasket__price,
-.deskBasket__price{
+.divBasket__price{
     font-weight: 500;
     font-size: 15px;
     color: #838383;
@@ -1250,14 +1233,12 @@ address {
     flex-grow: 1;
 }
 
-.mobileBasket__desc_main,
-.deskBasket__desc_main {
+.basket__desc_main {
     display: flex;
     justify-content: space-between;
 }
 
-.mobileBasket__weightPrice,
-.deskBasket__weightPrice {
+.basket__weightPrice {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1318,12 +1299,12 @@ address {
     margin-top: 20px;
 }
 
-.mobileBasket_forFreeDelivery,
-.deskBasket_forFreeDelivery {
+.basket_forFreeDelivery {
     font-weight: 500;
     font-size: 13px;
     color: var(--color-bordeaux);
     margin-bottom: 10px;
+    display: inline-block;
 }
 
 .mobileBasket_priceDelivery,
@@ -1354,10 +1335,7 @@ address {
     color: var(--text-color-grey);
 }
 
-.mobileBasket_forFreeDelivery,
-.deskBasket_forFreeDelivery {
-    display: inline-block;
-}
+
 
 .mobileBasket__button_order,
 .deskBasket__button_order {
@@ -2019,7 +1997,7 @@ input[type="number"]:focus {
         row-gap: 33px;
     }
 
-    .order__basket .mobileBasket__card.last__card {
+    .order__basket .basket__card.last__card {
         display: grid;
         grid-template-columns: min-content 1fr max-content auto;
         align-items: center;
@@ -2029,53 +2007,53 @@ input[type="number"]:focus {
         grid-template-columns: 1fr auto auto;
     }
 
-    .order__topping_card .mobileBasket__count {
+    .order__topping_card .basket__count {
         grid-column: 3/4;
         grid-row: 1/3;
     }
 
-    .order__topping_card .mobileBasket__price {
+    .order__topping_card .divBasket__price {
         grid-column: 2/3;
         grid-row: 1/3;
         align-self: center;
     }
 
-    .order__list .mobileBasket__h3 {
+    .order__list .basket__h3 {
         grid-column: 2/3;
         grid-row: 1/2;
         padding-bottom: 0px;
         align-self: end;
     }
 
-    .last__card .mobileBasket__h3,
-    .last__card .mobileBasket__card_pict,
-    .last__card .mobileBasket__count {
+    .last__card .basket__h3,
+    .last__card .basket__card_pict,
+    .last__card .basket__count {
         grid-column: span 1;
         grid-row: span 1;
         row-gap: 0;
     }
 
-    .last__card .mobileBasket__price {
+    .last__card .divBasket__price {
         justify-self: end;
         align-self: center;
     }
 
-    .order__basket .mobileBasket__card {
+    .order__basket .basket__card {
         row-gap: 10px;
     }
 
-    .order__list .mobileBasket__card_pict {
+    .order__list .basket__card_pict {
         grid-column: 1/2;
         grid-row: 1/3;
     }
 
-    .order__list .mobileBasket__count {
+    .order__list .basket__count {
         grid-row: 1/3;
         grid-column: 3/4;
         align-self: center;
     }
 
-    .order__list .mobileBasket__weightPrice {
+    .order__list .basket__weightPrice {
         flex-direction: row;
     }
 
@@ -2466,6 +2444,10 @@ input[type="number"]:focus {
         margin-left: auto;
         margin-right: auto;
     }
+    .basket__h3 {
+        font-size: 13px;
+        font-weight: 500;
+    }
 
     .menu__main_img {
         height: 240px;
@@ -2532,18 +2514,18 @@ input[type="number"]:focus {
         grid-template-columns: 1fr auto;
     }
 
-    .order__topping_card .mobileBasket__count {
+    .order__topping_card .basket__count {
         grid-column: span 1;
         grid-row: span 1;
     }
 
-    .order__topping_card .mobileBasket__price {
+    .order__topping_card .divBasket__price {
         grid-column: span 1;
         grid-row: span 1;
         align-self: center;
     }
 
-    .order__topping_card .mobileBasket__price {
+    .order__topping_card .divBasket__price {
         grid-column: span 1;
         grid-row: span 1;
     }
