--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -74,6 +74,10 @@ a:active {
     color: inherit;
 }
 
+input {
+    outline: none;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -119,7 +123,7 @@ a:active {
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 11;
+    z-index: 111;
     height: 75px;
     padding-left: 20px;
     padding-right: 20px;
@@ -454,7 +458,7 @@ a:active {
     border-radius: 10px;
 }
 
-.allFull {
+.one {
     grid-column: span 2;
 }
 
@@ -478,6 +482,8 @@ a:active {
 
 .order {
     width: 100%;
+    padding-top: 23px;
+    padding-bottom: 30px;
     background-color: var(--color-milky);
 }
 
@@ -485,6 +491,133 @@ a:active {
     font-weight: 500;
     font-size: 24px;
     color: var(--color-bordeaux-light);
+}
+
+.order__payment {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.wrapper__payment {
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 25px;
+}
+
+.paymentCard {
+    margin-top: 25px;
+    margin-bottom: 20px;
+    height: 47px;
+    width: 100%;
+    background: #FBFBFB;
+    border: 1px solid #D6D6D6;
+    border-radius: 10px;
+    outline: none;
+    padding-left: 25px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.paymentCard:focus,
+.paymentCard:active {
+    background: #FFF3DC;
+    border: 1px solid #B06D81;
+    border-radius: 10px
+}
+
+
+.range {
+    width: 100%;
+    /*pointer-events: none;*/
+}
+
+.bonus__text {
+    padding-bottom: 10px;
+}
+
+.bonus__item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.order__payment {
+    margin-top: 30px;
+}
+
+.shortChange {
+    display: flex;
+    flex-direction: column;
+    row-gap: 18px;
+    padding-bottom: 31px;
+}
+
+.shortChange__item,
+.shortChange__input {
+    cursor: pointer;
+    width: 60px;
+    height: 47px;
+    background: #FBFBFB;
+    border: 1px solid #D6D6D6;
+    border-radius: 10px;
+    text-align: center;
+    outline: none;
+    font-weight: 500;
+    font-size: 15px;
+    color: #BABABA;
+}
+
+.shortChange__price {
+    display: flex;
+    justify-content: space-between;
+}
+
+.shortChange__input {
+    width: 100%;
+    text-align: left;
+    padding-left: 25px;
+}
+
+.noShortChange {
+    width: 86px;
+}
+
+.finalOrder {
+    display: flex;
+    cursor: pointer;
+    padding-left: 23px;
+    padding-right: 18px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    border: none;
+    color: var(--text-color-white);
+    background: #831335;
+    border-radius: 0px 0px 10px 10px;
+}
+
+.orderPrice .rouble {
+    font-weight: 400;
+    font-size: 20px;
+}
+
+.orderPrice__price {
+    font-weight: 700;
+    font-size: 20px;
+}
+.orderPrice_text {
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.orderBtnText {
+    font-weight: 700;
+    font-size: 15px;
+}
+
+.footer__orderPayment {
+    padding-top: 23px;
 }
 
 .order__item {
@@ -551,19 +684,30 @@ a:active {
 .order__basket .input_text {
     height: 42px;
 }
+
 .address__main {
     display: grid;
-    grid-template-columns: 80px 80px 1fr  80px;
+    grid-template-columns: 80px 80px 1fr 80px;
     column-gap: 15px;
     row-gap: 17px;
+
 }
-.street {
-    grid-column: span 4;
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
+
+select::-ms-expand {
+    display: none;
+}
+
 .flat,
 .intercom {
     grid-column: 4/5;
 }
+
 .comments__textarea {
     background: #FBFBFB;
     border: 1px solid #D6D6D6;
@@ -583,20 +727,146 @@ a:active {
     background: #FBFBFB;
     border: 1px solid #D6D6D6;
     border-radius: 10px;
-}
-.street {
-    width: 100%;
+    text-align: center;
 }
 
+.street {
+    grid-column: span 4;
+    padding-left: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    width: 100%;
+    border-color: #B06D81;
+    text-align: left;
+}
+
+.house {
+    border-color: #B06D81;
+}
+
+.dateTime {
+    display: grid;
+    padding-top: 15px;
+    column-gap: 15px;
+    grid-template-columns: 2fr 1fr;
+
+}
+
+.dateTime__item {
+    height: 47px;
+    background: #FBFBFB;
+    border: 1px solid #D6D6D6;
+    border-radius: 10px;
+    outline: none;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+
+.date {}
+
+.time {}
+
+input[type=range] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+    height: 3px;
+    background: #D9D9D9;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    background: var(--color-bordeaux-light);
+    border-radius: 100%;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    -webkit-appearance: none;
+    margin-top: -11px;
+}
+
+input[type=range]::-moz-range-track {
+    height: 3px;
+    background: #D9D9D9;
+}
+
+input[type=range]::-moz-range-thumb {
+    background: var(--color-bordeaux-light);
+    border-radius: 100%;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    -webkit-appearance: none;
+    margin-top: -11px;
+}
+
+.order__address {
+    padding-top: 25px;
+    padding-left: 17px;
+    padding-right: 25px;
+    padding-bottom: 45px;
+}
+
+.confirm {
+    position: relative;
+    height: 19px;
+    width: 19px;
+    background: #FDF5E6;
+    border-radius: 10px;
+    display: inline-block
+}
+
+.confirm_img {
+    position: absolute;
+    left: 3px;
+    bottom: 4px;
+    display: none;
+}
+
+.confirm__text {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.confirm__check {
+    display: none;
+}
+
+.confirm__active {
+    display: block;
+}
+
+.confirm__div {
+    padding-top: 40px;
+    padding-bottom: 35px;
+}
+
+.mainGallery.orderGallery {
+    display: block;
+    height: 148px;
+}
 
 .comments__textarea:focus,
 .comments__textarea:active,
-.textarea:focus,
-.textarea:active {
+.address__item:focus,
+.address__item:active,
+.dateTime__item:focus,
+.dateTime__item:active {
     outline: none;
     background: #FFF3DC;
     border-color: #B06D81;
     border: 1px solid #B06D81;
+}
+
+option:focus,
+option:active {
+    background: unset;
+    border-color: var(--text-color-white);
+    border: unset;
 }
 
 input[type=text]::placeholder {
@@ -2545,7 +2815,7 @@ input[type="number"]:focus {
     }
 }
 
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 1450px) {
     .wrapper {
         padding-left: 195px;
         padding-right: 147px;
@@ -2595,6 +2865,10 @@ input[type="number"]:focus {
         padding-bottom: 28px;
         padding-left: 27px;
         padding-right: 30px;
+    }
+
+    .order__payment {
+        padding: 0;
     }
 
     .aboutUs__wr {
