--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1124,6 +1124,11 @@ input[type=text]:-ms-input-placeholder {
     padding-right: 10px;
     padding-left: 10px;
 }
+.option_item {
+    margin-top: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+}
 
 .card {
     height: 40px;
