--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1125,6 +1125,7 @@ input[type=text]:-ms-input-placeholder {
     padding-right: 10px;
     padding-left: 10px;
 }
+
 .option_item {
     margin-top: 10px;
     padding-bottom: 10px;
@@ -1947,7 +1948,7 @@ input[type="number"]:focus {
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    height: calc(100vh - 190px);    
+    height: calc(100vh - 190px);
     z-index: 100501;
     background-color: var(--text-color-white);
     /*max-height: calc(100vh - 130px);*/
@@ -2357,6 +2358,72 @@ input[type="number"]:focus {
 
 .asideModal {
     position: relative;
+}
+
+/*--------------------Modal profile-----------------------------------*/
+.modalProfile {
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+.profile__extra {
+    height: 130px;
+    backdrop-filter: blur(2px);
+}
+
+.profile__main {
+    padding-top: 38px;
+    padding-left: 43px;
+    padding-right: 43px;
+    background-color: var(--text-color-white);
+    border: 2px solid #DDDDDD;
+    border-radius: 10px;
+    height: calc(100vh - 130px);
+}
+
+.profile__h2 {
+    font-size: 24px;
+    color: #831335;
+}
+
+.profile__p {
+    font-weight: 500;
+    font-size: 14px;
+    color: #757575;
+    line-height: 16px;
+    padding-bottom: 28px;
+}
+
+.profile__header {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 36px;
+}
+
+.profile__input {
+    width: 100%;
+    height: 47px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-size: 18px;
+    background: #FFF3DC;
+    border: 1px solid #D6D6D6;
+    border-radius: 10px;
+    margin-bottom: 19px;
+}
+
+.profile__button {
+    background: #831335;
+    border-radius: 10px;
+    height: 47px;
+    width: 100%;
+    font-weight: 700;
+    font-size: 15px;
+    color: var(--text-color-white);
 }
 
 /*------------------------MEDIA---------------------------------------*/
@@ -2835,7 +2902,8 @@ input[type="number"]:focus {
 
     .footer__BJU {
         width: 50%;
-        height: 100%; /*75px*/
+        height: 100%;
+        /*75px*/
     }
 
     .modal__BJU_item {
@@ -2881,7 +2949,7 @@ input[type="number"]:focus {
 
     .modal__desc {
         height: 75px;
-       
+
     }
 }
 
@@ -2894,7 +2962,7 @@ input[type="number"]:focus {
     .modal__desc {
         font-size: 16px;
         max-height: 75px;
-      /*  overflow: auto;*/
+        /*  overflow: auto;*/
     }
 
     .topping__price {
