--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -177,6 +177,7 @@ input {
 }
 
 .profile {
+    cursor: pointer;
     margin-left: 25px;
     margin-right: 20px;
     display: flex;
@@ -2362,6 +2363,7 @@ input[type="number"]:focus {
 
 /*--------------------Modal profile-----------------------------------*/
 .modalProfile {
+    display: none;
     z-index: 1000;
     position: absolute;
     top: 0;
@@ -2403,7 +2405,7 @@ input[type="number"]:focus {
     padding-bottom: 36px;
 }
 
-.profile__input {
+.profile__phone {
     width: 100%;
     height: 47px;
     display: flex;
@@ -2417,6 +2419,8 @@ input[type="number"]:focus {
 }
 
 .profile__button {
+    cursor: pointer;
+    border: none;
     background: #831335;
     border-radius: 10px;
     height: 47px;
@@ -2424,6 +2428,28 @@ input[type="number"]:focus {
     font-weight: 700;
     font-size: 15px;
     color: var(--text-color-white);
+    margin-bottom: 30px;
+}
+.profile__img {
+    cursor: pointer;
+}
+.profile__close {
+    cursor: pointer;
+}
+
+.profile__agreement,
+.profile__agreement .details {
+    font-family: 'Good Pro';
+    font-style: normal;
+    font-weight: 450;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: justify;
+    color: #757575;
+}
+
+.profile__agreement .details {
+    text-decoration: underline;
 }
 
 /*------------------------MEDIA---------------------------------------*/
@@ -2443,6 +2469,34 @@ input[type="number"]:focus {
         padding-left: 43px;
         padding-right: 40px;
         height: 124px;
+    }
+
+    .modalProfile {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .profile__extra {
+        display: none;
+    }
+
+    .profile__main {
+        position: absolute;
+        width: 464px;
+        height: 450px;
+        left: calc(50% - 232px);
+        top: calc(50% - 225px);
+        padding-top: 38px;
+    }
+
+    .profile__button {
+        margin-bottom: 50px;
+    }
+    .profile__p  {
+        padding-bottom: 50px;
     }
 
     .resto {
