--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2089,9 +2089,11 @@ input[type="number"]:focus {
 
 .modal__image_relative {}
 
-.modal__desc {
+.modal__desc,
+.modal__consist {
     font-family: 'FF Good Pro';
     height: 78px;
+    width: 100%;
     font-weight: 450;
     font-size: 14px;
     padding-top: 15px;
@@ -2576,7 +2578,9 @@ input[type="number"]:focus {
     .auth__enter {
         margin-bottom: 45px;
     }
-
+    .modal__desc {
+        padding-right: 45px;
+    }
     .auth__main_code .auth__p {
         padding-top: 52px;
     }
@@ -2612,6 +2616,70 @@ input[type="number"]:focus {
         font-size: 15px;
         letter-spacing: 0.2em;
         color: #B4B2B2;
+    }
+
+    .modal__desc_full {
+        display: flex;
+        height: 77px;
+    }
+    .modal__consist {
+        padding-left: 45px;
+    }
+
+    .button_next {
+        position: absolute;
+        cursor: pointer;
+        right: 0;
+        bottom: 0px;
+        width: 40px;
+        height: 78px;
+        z-index: 100701;
+    }
+
+    .modal__desc_next {
+        position: absolute;
+        bottom: 30px;
+        right: 0px;
+        color: var(--color-bordeaux);
+        font-weight: 500;
+        font-size: 15px;
+        width: 50.68px;
+        height: 19.43px;
+        transform: rotate(-90deg);
+        border: none;
+        background-color: var(--text-color-white);
+    }
+
+    .modal__desc_arrowRight {
+        position: absolute;
+        object-fit: cover;
+        width: 6px !important;
+        height: 10px;
+        right: 10px;
+        bottom: 35px;
+        align-items: center;
+        color: var(--color-bordeaux);        
+        text-align: center;
+    }
+    .button_prev { 
+        position: absolute;
+        padding-left: 10px;
+        cursor: pointer;
+        width: 70px;
+        height: 78px;
+        left: 0px;
+        bottom: 0px;
+        z-index: 100801;
+    }
+    .modal__desc_arrowLeft {
+        position: absolute;
+        bottom: 35px;
+        object-fit: cover;
+        width: 6px !important;
+        height: 10px;
+        align-items: center;
+        color: var(--color-bordeaux);
+        text-align: center;
     }
 
     .aboutUs__buttons {
@@ -3063,7 +3131,7 @@ input[type="number"]:focus {
 
     .footer__BJU {
         width: 50%;
-       /* height: 100%;*/
+        /* height: 100%;*/
         /*75px*/
     }
 
