--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -146,8 +146,8 @@ input {
     display: block;
 }
 .mobile__profile_img img {
-width: 22px;
-height: 22px;
+width: 47px;
+height: 47px;
 }
 .mobileBasket__close {}
 
@@ -183,15 +183,10 @@ height: 22px;
     cursor: pointer;
     margin-left: 25px;
     margin-right: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     width: 65px;
     height: 65px;
-    background: var(--color-bordeaux);
-    border: 2px solid #FFFFFF;
-    border-radius: 50%;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+    
 }
 
 .phone {
@@ -282,15 +277,10 @@ height: 22px;
 }
 
 .mobile__profile_img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     width: 47px;
     height: 47px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    background: var(--color-bordeaux);
-    border: 2px solid var(--text-color-white);
+    
 }
 
 .mobile__indicator {
@@ -1246,7 +1236,6 @@ input[type=text]:-ms-input-placeholder {
     font-weight: 500;
     font-size: 15px;
     color: #757575;
-    ;
 }
 
 .aboutUs {
@@ -1824,7 +1813,7 @@ address {
 
 .input_text {
     height: 47px;
-    border: solid 1px var(--color-bordeaux);
+    border: 1px solid #B06D81;
     text-align: center;
 }
 
@@ -2116,7 +2105,6 @@ input[type="number"]:focus {
 
 .swiper .modal__card_img {
     width: 100%;
-    height: 100%;
     height: 265px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
@@ -2519,8 +2507,8 @@ input[type="number"]:focus {
 
 .profile__img {
     cursor: pointer;
-    width: 28px;
-    height: 28px;
+    width: 65px;
+    height: 65px;
 }
 
 .auth__close {
@@ -2606,6 +2594,9 @@ input[type="number"]:focus {
         padding-left: 43px;
         padding-right: 40px;
         height: 124px;
+    }
+    .swiper .modal__card_img {
+        height: 410px;
     }
 
     .modalAuth {
